# advent-of-code

./: Cargo.toml  Justfile
2024/day-1/: Cargo.toml
2024/day-12/: Cargo.toml
2024/day-13/: Cargo.toml
2024/day-2/: Cargo.toml
2024/day-23/: Cargo.toml
2024/day-24/: Cargo.toml
2024/day-3/: Cargo.toml
2024/day-7/: Cargo.toml
2025/day-1/: Cargo.toml  README.md
2025/day-1/benches/: benchmarks.rs
2025/day-1/src/: part1.rs  part2.rs
2025/day-10/: Cargo.toml  README.md
2025/day-10/benches/: benchmarks.rs  precise_benchmarks.rs
2025/day-10/src/: part1.rs  part2.rs
2025/day-11/: Cargo.toml  README.md
2025/day-11/benches/: benchmarks.rs
2025/day-11/src/: part1.rs  part2.rs
2025/day-12/: Cargo.toml  README.md
2025/day-12/benches/: benchmarks.rs
2025/day-12/src/: part1.rs  part2.rs
2025/day-2/: Cargo.toml  README.md
2025/day-2/benches/: benchmarks.rs
2025/day-2/src/: part1.rs  part2.rs
2025/day-3/: Cargo.toml  README.md
2025/day-3/benches/: benchmarks.rs
2025/day-3/src/: part1.rs  part2.rs
2025/day-4/: Cargo.toml  README.md
2025/day-4/benches/: benchmarks.rs
2025/day-4/src/: part1.rs  part2.rs
2025/day-5/: Cargo.toml  README.md
2025/day-5/benches/: benchmarks.rs
2025/day-5/src/: part1.rs  part2.rs
2025/day-6/: Cargo.toml  README.md
2025/day-6/benches/: benchmarks.rs
2025/day-6/src/: part1.rs  part2.rs
2025/day-7/: Cargo.toml  README.md
2025/day-7/benches/: benchmarks.rs
2025/day-7/src/: part1.rs  part2.rs
2025/day-8/: Cargo.toml  README.md
2025/day-8/benches/: benchmarks.rs
2025/day-8/src/: part1.rs  part2.rs
2025/day-9/: Cargo.toml  README.md
2025/day-9/benches/: benchmarks.rs  precise_benchmarks.rs
2025/day-9/src/: part1.rs  part2.rs
daily-template/: Cargo.toml
daily-template/src/: part1.rs
