[workspace]
resolver = "2"
members = ["2023/day-*", "2024/day-*", "2025/day-*"]

[workspace.dependencies]
glam = "0.29.2"
itertools = "0.13.0"
miette = { version = "7.4.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
rstest = "0.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tracy = "0.11.3"
tracy-client = "0.17.4"
tracy-client-sys = "0.24.2"
rayon = "1.10.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
divan = "0.1.17"

[profile.release]
debug = 1
incremental = true
opt-level = 3
lto = true

[profile.dev.package.backtrace]
opt-level = 3
