[workspace]
resolver = "2"
members = ["2023/day-*", "2024/day-*", "2025/day-*"]

[workspace.dependencies]
glam = "0.30.9"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
rstest = "0.26.1"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tracing-tracy = "0.11.4"
tracy-client = "0.18.3"
tracy-client-sys = "0.27.0"
rayon = "1.11.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
divan = "0.1.21"
chumsky = "0.11.2"

[profile.release]
debug = 1
incremental = true
opt-level = 3
lto = true

[profile.dev.package.backtrace]
opt-level = 3
