[package]
name = "aoc2024-day-1"
authors = ["Pablo Hernandez (@Hadronomy)"]
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
counter = "0.7.0"

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "2024-day-01-bench"
path = "benches/benchmarks.rs"
harness = false
