[package]
name = "aoc2024-day-3"
authors = ["Pablo Hernandez (@Hadronomy)"]
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nom = { workspace = true }
nom_locate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
regex = "1.12.2"
pest = { version = "2.8.4", features = ["miette-error"] }
pest_derive = "2.8.4"

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "2024-day-3-bench"
path = "benches/benchmarks.rs"
harness = false
