[package]
name = "aoc2024-day-7"
authors = ["Pablo Hernandez (@Hadronomy)"]
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nom = { workspace = true }
nom_locate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "2024-day-7-bench"
path = "benches/benchmarks.rs"
harness = false
